<resources>
    <string name="app_name">WorkiFy</string>
    <string name="regex_email">^[A-Za-z0-9+_.-]+@[A-Za-z0-9.-]+$</string>
    <string name="hint_input_email">Email</string>
    <string name="err_not_an_email">Email format is incorrect</string>
    <string name="regex_password">^.{8,}$</string>
    <string name="hint_input_password">Password</string>
    <string name="err_not_a_password">Password must be more than 8 characters</string>
    <string name="hint_input_name">Name</string>
    <string name="err_input_reqired">Field is required</string>
    <string name="app_desc">Plan your activities\nwith us</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Register</string>
    <string name="tv_register">Register</string>
    <string name="tv_login">Login</string>
    <string name="hint_btn_login">Login</string>
    <string name="hint_btn_signup">Register</string>
    <string name="tv_forgot_pass">Forgot password?</string>
    <string name="tv_hint_forgot_pass">fill in your email first, so we can help you find your account..</string>
    <string name="btn_forgot">Find</string>
    <string name="tv_reset_pass">Reset password</string>
    <string name="tv_hint_reset_pass">I found the account, let\'s create a new password..</string>
    <string name="btn_reset">Reset</string>
    <string name="menu_home">Home</string>
    <string name="menu_activity">Activity</string>
    <string name="menu_article">Article</string>
    <string name="menu_setting">Setting</string>
    <string name="cd_add_activity">add activity</string>
    <string name="menu_add">Add Activity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_date_now">Sabtu, 15 Juni 2024</string>
    <string name="tv_today_stress_levels">Today Stress Levels</string>
    <string name="tv_stress_level">Really Stress</string>
    <string name="tv_work_capacity">Working Capacity: 50</string>
    <string name="tv_learn_about_working_points">Learn about working points on workify</string>
    <string name="btn_learn">Learn it</string>
    <string name="btn_view_more">View more</string>
    <string name="tv_upcoming_activity">Upcoming Activity</string>
    <string name="tv_article">Article</string>
    <string name="cd_back">back</string>
    <string name="greetings_good_morning">Good Morning</string>
    <string name="greetings_good_afternoon">Good Afternoon</string>
    <string name="greetings_good_evening">Good Evening</string>
    <string name="greetings_good_night">Good Night</string>
    <string name="tv_important">Important</string>
    <string name="title_article">Article</string>
    <string name="title_activity">Activity</string>
    <string name="title_setting">Settings</string>
    <string name="btn_change_languange">Change Languange</string>
    <string name="btn_Logout">Logout</string>
    <string name="et_activity_name">Activity Name</string>
    <string name="et_assignor">Assignor</string>
    <string name="et_date">Date (dd-mm-yyyy)</string>
    <string name="et_time">Time (hh:mm)</string>
    <string name="et_description">Description</string>
    <string name="tv_scale_of_activity_importance">Scale of activity importance</string>
    <string name="tv_scale_of_assignor_importance">Scale of assignor importance</string>
    <string name="et_estimated_time">Estimated duration (in hours)</string>
    <string name="title_add_activity">Add Activity</string>
    <string name="btn_add_activity">Add Activity</string>
    <string name="tv_empty_article">You have not added any activity data yet.</string>
    <string name="toast_login_successful">Login Successful</string>
    <string name="toast_activity_name_cannot_be_empty">Activity Name cannot be empty</string>
    <string name="toast_assignor_cannot_be_empty">Assignor cannot be empty</string>
    <string name="toast_date_cannot_be_empty">Date cannot be empty</string>
    <string name="toast_time_cannot_be_empty">Time cannot be empty</string>
    <string name="toast_estimated_time_cannot_be_empty">Estimated Time cannot be empty</string>
    <string name="toast_description_cannot_be_empty">Description cannot be empty</string>
    <string name="toast_complete_the_form_first">Complete the form first</string>
    <string name="toast_activities_have_been_added">Activities have been added</string>
    <string name="toast_activity_failed_to_add">activity failed to add</string>
    <string name="toast_invalid_open_browser">Invalid link or Browser app is not available</string>
    <string name="toast_logout_succesfull">Logout succesfull</string>
    <string name="tv_descriibe_point">1. Zen Zone (0-24):\nRepresents a state of calm and relaxation, almost stress-free. \n\n2. Chill Mode (25-49): \nIndicates a manageable level of stress that does not significantly disrupt activities. \n\n3. Busy Bee (50-74): \nReflects a fairly high level of stress, depicting busyness and intense activity.\n \n4. Pressure Cooker (over 75): \nIndicates a very high level of stress, akin to being under immense pressure.</string>
    <string name="title_about_working_point">About Working Point</string>
</resources>