<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondaryContainer"
    android:orientation="vertical"
    tools:context=".ui.addActivity.AddActivityFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="12dp"
        android:text="@string/title_add_activity"
        android:textAlignment="center" />

    <ProgressBar
        android:id="@+id/pb_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:elevation="9dp"
        tools:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp">

            <EditText
                android:id="@+id/et_activity_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_activity_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp" />

            <EditText
                android:id="@+id/et_assignor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_assignor"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp" />

            <EditText
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_date"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp" />

            <EditText
                android:id="@+id/et_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_time"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp" />

            <EditText
                android:id="@+id/et_estimated_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_estimated_time"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/et_description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="2"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:text="@string/tv_scale_of_activity_importance" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sldr_activity_importance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1.0"
                android:valueFrom="1.0"
                android:valueTo="5.0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:text="@string/tv_scale_of_assignor_importance" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sldr_assignor_importance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1.0"
                android:valueFrom="1.0"
                android:valueTo="5.0" />

            <Button
                android:id="@+id/btn_add_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/btn_add_activity" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>