<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondaryContainer"
    android:orientation="vertical"
    tools:context=".ui.listActivity.ListActivityFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient"
        android:importantForAccessibility="no" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_greetings"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        tools:text="Selamat Pagi," />

                    <TextView
                        android:id="@+id/tv_display_name"
                        style="@style/TextAppearance.Material3.TitleLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        tools:text="Mark JukerBreg" />
                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    tools:src="@tools:sample/avatars"
                    tools:visibility="visible" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_stress_point"
                        style="@style/TextAppearance.MaterialComponents.Headline3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:background="@drawable/bg_circle"
                        android:backgroundTint="?attr/colorPrimary"
                        android:textColor="?attr/colorOnPrimary"
                        android:gravity="center"
                        android:textStyle="bold"
                        tools:text="73" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_date_now"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="?attr/colorOnSurface"
                            android:textSize="12sp"
                            tools:text="@string/tv_date_now" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_today_stress_levels"
                            android:textColor="?attr/colorOnSurface"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_stress_level"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="32sp"
                            android:textStyle="bold"
                            tools:text="@string/tv_stress_level"
                            tools:textColor="?attr/colorError" />

                        <TextView
                            android:id="@+id/tv_work_capacity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="?attr/colorOnSurface"
                            android:textSize="12sp"
                            android:text="@string/tv_work_capacity" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="8dp"
                        android:text="@string/tv_learn_about_working_points"
                        android:textColor="?attr/colorOnSurface" />

                    <Button
                        android:id="@+id/btn_learn"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_learn_it"
                        android:drawableTint="?attr/colorPrimary"
                        android:text="@string/btn_learn" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextAppearance.Material3.TitleMedium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="8dp"
                        android:text="@string/tv_upcoming_activity"
                        android:textColor="?attr/colorOnSurface"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_activity"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_view_more" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_empty_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="48dp"
                    android:text="@string/tv_empty_article"
                    android:textAlignment="center"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_upcoming_activities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextAppearance.Material3.TitleMedium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="8dp"
                        android:text="@string/tv_article"
                        android:textColor="?attr/colorOnSurface"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_article"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_view_more" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_articles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>